# sitespawner

./: .ci.yml  README.md  pyproject.toml
src/sitespawner/: __init__.py  common.py  convert_data.py  gen_coverage_report.py  generate.py  genhtml.py  update_style.py  update_webpage.py
src/sitespawner/styles/: cov.css
src/sitespawner/template/coverage_report/: coverage_report.html  src_view.html
src/sitespawner/template/webpage/: conf.py
