[build-system]
requires = ["setuptools >= 65", "wheel >= 0.38"]
build-backend = "setuptools.build_meta"

[project]
name = "SiteSpawner"
authors = [
    { name = "Antmicro" }
]

description = "Project website generator, embeding RTL coverage reports."
requires-python = ">=3.8"
version = "0.0.1"
license = {file = "LICENSE"}
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
dependencies = [
    "antmicro-sphinx-utils @ git+https://github.com/antmicro/antmicro-sphinx-utils.git",
    "beautifulsoup4",
    "coloredlogs",
    "gitpython",
    "jinja2",
    "myst-parser",
    "sphinx < 8.0.0",
    "sphinx_tabs",
    "sphinx-immaterial",
    "sphinxcontrib-mermaid",
    "termcolor",
    "importlib_resources; python_version<'3.9'"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
sitespawner = ["styles/*",
               "styles/*/*",
               "template/*",
               "template/*/*"]

[project.scripts]
sis = 'sitespawner.__init__:main'

[project.optional-dependencies]
dev = [
    "black",
    "ruff",
]

[tool.black]
line-length = 100

[tool.ruff]
target-version = "py38"
line-length = 100

[tool.ruff.lint]
select = [
    "A",
    "ARG",
    "B",
    "C",
    "DTZ",
    "E",
    "EM",
    "F",
    "FBT",
    "I",
    "ICN",
    "ISC",
    "N",
    "PLC",
    "PLE",
    "PLR",
    "PLW",
    "Q",
    "RUF",
    "S",
    "T",
    "TID",
    "UP",
    "W",
    "YTT",
]

ignore = [
    # Ignore checks for possible passwords
    "S105", "S106", "S107",
    # Ignore complexity
    "C901", "PLR0911", "PLR0912", "PLR0913", "PLR0915",
    # Subprocess checks
    "S603", "S607",
    # Boolean kwargs
    "FBT002",
    # Mutable class attributes
    "RUF012",
    # Ignore jinja2 autoescape
    "S701",
    # Ignore missing 'tz'
    "DTZ005",

]

[tool.ruff.lint.isort]
known-first-party = ["sitespawner"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.flake8-import-conventions.aliases]
"bs4.BeautifulSoup" = "BS"
